--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <div class="card" onclick="deleteLast()">DEL</div>
         <div class="card" onclick="insert('/')">/</div>
         <div class="card" onclick="insert('*')">*</div>
+        <div class="card" onclick="insert('**')">^</div>
+        <div class="card" onclick="squareRoot()">√</div>
+        <div class="card" onclick="percentage()">%</div>
         <div class="card" onclick="insert('7')">7</div>
         <div class="card" onclick="insert('8')">8</div>
         <div class="card" onclick="insert('9')">9</div>
@@ -32,7 +35,17 @@
         <div class="card" onclick="insert('0')">0</div>
         <div class="card" onclick="insert('.')">.</div>
     </div>
+    <div class="history-settings">
+        <label for="history-length">Historique (taille max):</label>
+        <input type="number" id="history-length" min="0" value="5" onchange="updateHistoryLength()">
+    </div>
+    <div id="history" class="history"></div>
 </div>
 <script src="script.js"></script>
+<script>
+if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('service-worker.js');
+}
+</script>
 </body>
 </html>
