--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="buttons">
         <div class="card" onclick="clearScreen()">C</div>
         <div class="card" onclick="deleteLast()">DEL</div>
-        <div class="card light" onclick="percentage()">%</div>
-        <div class="card light" onclick="insert('/')">/</div>
+        <div class="card" onclick="percentage()">%</div>
+        <div class="card" onclick="insert('/')">/</div>
 
         <div class="card light" onclick="insert('7')">7</div>
         <div class="card light" onclick="insert('8')">8</div>
@@ -35,8 +35,8 @@
 
         <div class="card light" onclick="insert('0')">0</div>
         <div class="card light" onclick="insert('.')">.</div>
-        <div class="card light" onclick="insert('**')">^</div>
-        <div class="card light" onclick="squareRoot()">√</div>
+        <div class="card" onclick="insert('**')">^</div>
+        <div class="card" onclick="squareRoot()">√</div>
 
         <div class="card" onclick="calculate()" style="grid-column: span 4;">=</div>
     </div>
