Implement double-click clear history

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <input type="text" id="result" readonly>
     </div>
     <div class="buttons">
-        <div class="card" onclick="clearScreen()">C</div>
+        <div class="card" id="clearButton">C</div>
         <div class="card" onclick="deleteLast()">DEL</div>
         <div class="card" onclick="percentage()">%</div>
         <div class="card" onclick="insert('/')">/</div>
