Update buttons for multiplication and exponent

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="card light" onclick="insert('7')">7</div>
         <div class="card light" onclick="insert('8')">8</div>
         <div class="card light" onclick="insert('9')">9</div>
-        <div class="card" onclick="insert('*')">*</div>
+        <div class="card" onclick="insert('*', 'X')">X</div>
 
         <div class="card light" onclick="insert('4')">4</div>
         <div class="card light" onclick="insert('5')">5</div>
@@ -35,7 +35,7 @@
 
         <div class="card light" onclick="insert('0')">0</div>
         <div class="card light" onclick="insert('.')">.</div>
-        <div class="card" onclick="insert('**')">^</div>
+        <div class="card" onclick="insert('**', 'Xʸ')">X&#x02B8;</div>
         <div class="card" onclick="squareRoot()">√</div>
 
         <div class="card" onclick="calculate()" style="grid-column: span 4;">=</div>
