--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <div class="card light" onclick="insert('0')">0</div>
         <div class="card light" onclick="insert('.')">.</div>
-        <div class="card" onclick="insert('**', 'Xʸ')">X&#x02B8;</div>
+        <div class="card" onclick="insert('**', 'xʸ')">x&#x02B8;</div>
         <div class="card" onclick="squareRoot()">√</div>
 
         <div class="card" onclick="calculate()" style="grid-column: span 4;">=</div>
